tests/invalid/calls/i24_call_function_not_sub.f
program badcall
  integer x
  x = 0
  call twotimes(5)
  print *, x
end

integer function twotimes(n)
  integer n
  twotimes = n * 2
end
